--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   },
   "devDependencies": {
     "@types/cookie": "^0.4.1",
+    "@types/jest": "^27.4.0",
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.9",
+    "jest": "^27.5.0",
     "typescript": "4.5.5"
   }
 }
