--- a/package.json
+++ b/package.json
@@ -5,21 +5,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.5",
+    "@chakra-ui/react": "^1.8.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.3.1",
-    "@mui/material": "^5.4.0",
+    "@next-auth/sequelize-adapter": "^1.0.2",
     "cookie": "^0.4.2",
+    "framer-motion": "^6.2.6",
     "mysql2": "^2.3.3",
     "next": "12.0.9",
+    "next-auth": "^4.2.1",
     "next-connect": "^0.11.1",
+    "nodemailer": "^6.7.2",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sequelize": "^6.16.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -27,6 +33,7 @@
     "@types/jest": "^27.4.0",
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
+    "@types/validator": "^13.7.1",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.9",
     "jest": "^27.5.0",
