--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport-local": "^1.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-scroll": "^1.8.5",
     "sequelize": "^6.16.1",
     "uuid": "^8.3.2"
   },
@@ -33,6 +34,7 @@
     "@types/jest": "^27.4.0",
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
+    "@types/react-scroll": "^1.8.3",
     "@types/validator": "^13.7.1",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.9",
