--- a/.env.local.example
+++ b/.env.local.example
@@ -1,5 +1,9 @@
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=development
 MYSQL_HOST=db
 MYSQL_PORT=3306
 MYSQL_USER=root
 MYSQL_PASSWORD=secret
 MYSQL_DATABASE=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
