--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "cypress": "cypress open",
+    "cypress:headless": "cypress run",
+    "e2e": "start-server-and-test dev http://localhost:3000 cypress",
+    "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless",
     "test": "jest"
   },
   "dependencies": {
@@ -36,9 +40,11 @@
     "@types/react": "17.0.38",
     "@types/react-scroll": "^1.8.3",
     "@types/validator": "^13.7.1",
+    "cypress": "^9.5.0",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.9",
     "jest": "^27.5.0",
+    "start-server-and-test": "^1.14.0",
     "typescript": "4.5.5"
   }
 }
