--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "passport-local": "^1.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-scroll": "^1.8.5",
     "sequelize": "^6.16.1",
     "uuid": "^8.3.2"
