--- a/package.json
+++ b/package.json
@@ -34,17 +34,22 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@cypress/react": "^5.12.3",
+    "@cypress/webpack-dev-server": "^1.8.1",
     "@types/cookie": "^0.4.1",
     "@types/jest": "^27.4.0",
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
     "@types/react-scroll": "^1.8.3",
     "@types/validator": "^13.7.1",
-    "cypress": "^9.5.0",
+    "cypress": "^9.5.1",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.9",
+    "html-webpack-plugin": "^4.5.2",
     "jest": "^27.5.0",
     "start-server-and-test": "^1.14.0",
-    "typescript": "4.5.5"
+    "typescript": "4.5.5",
+    "webpack": "^4.46.0",
+    "webpack-dev-server": "^3.11.3"
   }
 }
