--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "cookie": "^0.4.2",
     "framer-motion": "^6.2.6",
     "mysql2": "^2.3.3",
-    "next": "12.0.9",
+    "next": "^12.1.0",
     "next-auth": "^4.2.1",
     "next-connect": "^0.11.1",
     "nodemailer": "^6.7.2",
@@ -32,7 +32,8 @@
     "react-icons": "^4.3.1",
     "react-scroll": "^1.8.5",
     "sequelize": "^6.16.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@cypress/react": "^5.12.3",
@@ -50,7 +51,7 @@
     "jest": "^27.5.0",
     "start-server-and-test": "^1.14.0",
     "typescript": "4.5.5",
-    "webpack": "^4.46.0",
-    "webpack-dev-server": "^3.11.3"
+    "webpack": "^5.70.0",
+    "webpack-dev-server": "^4.7.4"
   }
 }
