--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "^11.6.0",
     "@next-auth/sequelize-adapter": "^1.0.2",
     "cookie": "^0.4.2",
+    "formik": "^2.2.9",
     "framer-motion": "^6.2.6",
     "mysql2": "^2.3.3",
     "next": "^12.1.0",
