struggling to connect to db

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,9 +1,9 @@
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=development
-MYSQL_HOST=db
+MYSQL_HOST=curlo-1.cla5ezfb400l.us-west-2.rds.amazonaws.com
 MYSQL_PORT=3306
-MYSQL_USER=root
-MYSQL_PASSWORD=secret
-MYSQL_DATABASE=
+MYSQL_USER=curloadmin
+MYSQL_PASSWORD=XRlshstEG1grBbimRNPP
+MYSQL_DATABASE=curlo-1
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
