successfully connected to server

--- a/.env.local.example
+++ b/.env.local.example
@@ -4,6 +4,6 @@ MYSQL_HOST=curlo-1.cla5ezfb400l.us-west-2.rds.amazonaws.com
 MYSQL_PORT=3306
 MYSQL_USER=curloadmin
 MYSQL_PASSWORD=XRlshstEG1grBbimRNPP
-MYSQL_DATABASE=curlo-1
+MYSQL_DATABASE=curlo
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
