--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@next-auth/sequelize-adapter": "^1.0.2",
+    "chakra-react-select": "^3.1.2",
     "cookie": "^0.4.2",
     "formik": "^2.2.9",
     "framer-motion": "^6.2.6",
@@ -32,6 +33,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-scroll": "^1.8.5",
+    "react-select": "^5.2.2",
     "sequelize": "^6.16.1",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
