--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-scroll": "^1.8.5",
     "react-select": "^5.2.2",
     "sequelize": "^6.19.0",
+    "sqlite3": "^5.0.6",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
