--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "glicko2": "^0.8.7",
     "moment": "^2.29.3",
     "mysql2": "^2.3.3",
+    "net": "^1.0.2",
     "next": "^12.1.0",
     "next-auth": "^4.2.1",
     "next-connect": "^0.11.1",
@@ -37,6 +38,7 @@
     "react-scroll": "^1.8.5",
     "react-select": "^5.2.2",
     "sequelize": "^6.19.0",
+    "tls": "^0.0.1",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
