Ch 78 sequelize refactor (#49)
* Refactor handlers to use `.toJSON()` instead of `.get()`

* Fix `lib/models/category` styling

* Add sqlite3 to dependencies (for in-memory db)

* Configure sequelize to use in memory sqlite in tests

* Fix typo in `next.config.js` webpack5

* Add `supertest` dependency for API testing

* Refactor `/api/health` endpoint for simple API test

* Add simple test cases for some API and db operations

* Manually set `NODE_ENV` for github workflow

* Update models to set foreign keys; handler uses sequelize

* Refactor ratings page to resolve `key` in list; modify models

* Update tests for new rating sequelize query

* Sync sequelize in test env

* Add test environment variables

* Update API query to use `x-www-form-urlencoded`

* Refactor team ranking database query to support filter by category id

* Refactor `/api/team/selected` to use sequelize handler for db operations

* Implement tests for `/api/team/selected`

* Refactor categories to move away from raw SQL queries

* Migrate team db operations to sequelize

* Add tests for team db operations

* Migrate team matches operation to sequelize

* Fix 'no new line at end of file'

* Remove `populateTeamMatches`; client side handles result computing

* Update test to reflect component props changes

* Fix function invocation

* Update tests

* Remove debug logging

* Add return type annotation to `getTeamMatches`

* Rename `TeamMatches` interface to `TeamMatch` singular

* Remove duplicated interfaces

* Add test for `getTeamMatches`

* Fix incomplete match creation (missing team match rel)

* Complete test validation

* Remove unused imports

* Remove `updatedAt` from host info queries

* Fix `CH-77` relation between `Host` and `User`

* Update `createTeam` to register team admin info

* Fix foreign key reference between `User` and `Host`

--- a/.github/workflows/test-cypress.yaml
+++ b/.github/workflows/test-cypress.yaml
@@ -17,6 +17,8 @@ jobs:
       uses: cypress-io/github-action@v2
       with:
         command: npx cypress run-ct --config video=false,screenshotOnRunFailure=false
+    - name: Jest tests
+      run: npm run test
     - name: Build nextjs
       run: npm run build
     - name: Cypress run
@@ -24,8 +26,10 @@ jobs:
       env:
         NEXTAUTH_SECRET: gitactions-test
         NEXTAUTH_URL: "http://localhost:3000"
+        NODE_ENV: test
+        TEST: 1
       with:
         # already installed in the previous step
         install: false
         config: video=false,screenshotOnRunFailure=false
-        start: npm start
+        start: npm run dev
