--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-scroll": "^1.8.5",
     "react-select": "^5.2.2",
     "sequelize": "^6.19.0",
+    "sqlite3": "^5.0.6",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
@@ -48,6 +49,7 @@
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
     "@types/react-scroll": "^1.8.3",
+    "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.1",
     "cypress": "^9.5.2",
     "eslint": "8.7.0",
@@ -55,6 +57,7 @@
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.0",
     "start-server-and-test": "^1.14.0",
+    "supertest": "^6.2.3",
     "typescript": "4.5.5",
     "webpack": "^5.70.0",
     "webpack-dev-server": "^4.7.4"
