--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^6.2.6",
     "glicko2": "^0.8.7",
+    "google-libphonenumber": "^3.2.27",
     "moment": "^2.29.3",
     "mysql2": "^2.3.3",
     "next": "^12.1.0",
@@ -45,6 +46,7 @@
     "@cypress/react": "^5.12.3",
     "@cypress/webpack-dev-server": "^1.8.1",
     "@types/cookie": "^0.4.1",
+    "@types/google-libphonenumber": "^7.4.23",
     "@types/jest": "^27.4.0",
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
