--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "^11.6.0",
     "@next-auth/sequelize-adapter": "^1.0.2",
     "chakra-react-select": "^3.1.2",
+    "chart.js": "^3.8.0",
     "cookie": "^0.4.2",
     "formik": "^2.2.9",
     "framer-motion": "^6.2.6",
@@ -33,6 +34,7 @@
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "react": "17.0.2",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-scroll": "^1.8.5",
